--- a/index.html
+++ b/index.html
@@ -5,21 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
     <header>
         <nav>
             <div class="logo">Header Logo</div>
-            <ul>
+            <ul class="header-links">
                 <li>header link one</li>
                 <li>header link two</li>
                 <li>header link three</li>
             </ul>
         </nav>
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower constrast</p>
-        <button>Sign up</button>
-        <img src="#" alt="">
+        <div class="hero">
+            <div class="hero-texts">
+                <h1 class="hero-main-text">This website is awesome</h1>
+                <p class="hero-secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower constrast</p>
+                <button>Sign up</button>
+            </div>
+            <div class="image">
+                this is a placeholder for an image
+                <!-- <img src="#" alt=""> -->
+            </div>
+        </div>
     </header>
     <div class="body">
         <div class="section-information">
