--- a/index.html
+++ b/index.html
@@ -33,10 +33,29 @@
     </header>
     <div class="body">
         <div class="section-information">
-
+            <h2>Some random information.</h2>
+            <div class="information-items">
+                <div class="item-infor">
+                    <div class="image-item"><img src="https://images.unsplash.com/photo-1627687853764-0c84949367b5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80" alt=""></div>
+                    <p class="text-item">this is some subtext under and ilustration or image</p>
+                </div>
+                <div class="item-infor">
+                    <div class="image-item"><img src="https://images.unsplash.com/photo-1627687853764-0c84949367b5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"></div>
+                    <p class="text-item">this is some subtext under and ilustration or image</p>
+                </div>
+                <div class="item-infor">
+                    <div class="image-item"><img src="https://images.unsplash.com/photo-1627687853764-0c84949367b5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"></div>
+                    <p class="text-item">this is some subtext under and ilustration or image</p>
+                </div>
+                <div class="item-infor">
+                    <div class="image-item"><img src="https://images.unsplash.com/photo-1627687853764-0c84949367b5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"></div>
+                    <p class="text-item">this is some subtext under and ilustration or image</p>
+                </div>
+            </div>
         </div>
         <div class="section-quote">
-
+            <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people wiil actually read it. Who knows? All I know is that it looks nice.</p>
+            <p class="quote-author"></p>
         </div>
         <div class="section-calltoaction">
 
