--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="section-quote">
             <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people wiil actually read it. Who knows? All I know is that it looks nice.</p>
-            <p class="quote-author"></p>
+            <p class="quote-author">-Thor, God of Thunder</p>
         </div>
         <div class="section-calltoaction">
 
