--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
             <p class="quote-author">-Thor, God of Thunder</p>
         </div>
         <div class="section-calltoaction">
-
+            <div class="box">
+                <div class="text-calltoaction">
+                    <h3>Call to action! It's time!</h3>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <button>Sign up</button>
+            </div>
         </div>
     </div>
     <footer>
